スタイル追加

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<style>body {margin: 0; padding: 0;}</style>
 <title>loading</title>
 <div id="screen"></div>
 </html>
